Wrap and bug fix
fix column size

--- a/src/components/DataTable/style.less
+++ b/src/components/DataTable/style.less
@@ -109,14 +109,14 @@
     margin-right: 20px;
     margin-left: 20px;
   }
-  .ant-table-header:before {
+  .ant-table-body:before {
     content: " ";
     box-shadow: -4px 4px 5px rgba(0, 0, 0, 0.1);
     height: 4px;
     position: absolute;
     left: 0;
     right: 0;
-    top: 29px;
+    top:-5px;
     z-index: 999;
   }
   .ant-table-tbody {
