--- a/src/components/Modal/style.less
+++ b/src/components/Modal/style.less
@@ -38,6 +38,13 @@
 
   .ant-modal-footer {
     text-align: left;
+    border-top:0 solid;
+    .ant-btn{
+      border: 0;
+    }
+    .ant-btn-primary{
+      border-radius: 2px;
+    }
   }
 }
 
